@@ -6,11 +6,11 @@ AUX parity-1.1.0-percent-defines.patch 510 RMD160 f44e5ffa613bea7a20872364f977e2
 AUX parity-1.1.0-runtime-includes.patch 391 RMD160 b37ee9e5798a3e3d952bacdc1d89ebc7c73a235c SHA1 bc8cfafa5f18bd2eab205cdd91aed808d27b235e SHA256 b6f3a338e589773dd0402d1ac95b47675411844c36802af4d1b99e47729e57c9
 AUX parity-1.2.0-exception-handling.patch 1188 RMD160 27569e410f1ecabfe4efbfae936c0d30335c6d87 SHA1 c641d72c23dae5c82ae8e55f7f5c4baf114393aa SHA256 4a35beeb81546d3fd4c7e952b4aaa7cabd5c49a1ff2112e891bd56f7a5463536
 AUX parity-1.2.0-winnt-version.patch 344 RMD160 1c56c957effac94ea925b75b0816c3076d165c1c SHA1 45774250519c669a1883294b223b0e6152f0b04a SHA256 a6d76f4e534c21285f95d07ed9502864fd5c05004361b48b7203b0b7f3c61aab
-AUX parity-prefix-wrapper.sh 844 RMD160 20d64862df14beaa25dbf1824439e7b7fa099533 SHA1 0bfebd4de2be00d6d5ddbc4925b7732d0825320a SHA256 51fa909ef916f5d3a79352c79eeee81e3de09bcd4be77edd5fc4388e16c029c9
+AUX parity-prefix-wrapper.sh 1051 RMD160 0506e14bac61ba89af569942438153d2434ea5ab SHA1 bad793213882c3da18f5a246c76e608866553cd4 SHA256 15ad7ec6acd969407625c10966f467a8d60f4d9f204ee4a27d65dab16c0160d9
 DIST parity-1.2.1.tar.gz 438188 RMD160 00330ef4193363b3681a5e4d23401f8185293ab8 SHA1 1bc2d3fc7ffc8c37e470976348498c26824fc3e4 SHA256 d6019d3e68e8e7685b9d729ee4f7419e8814ea756fd340f7416f98a65b38c237
 DIST parity-1.2.2.tar.gz 438660 RMD160 712172e64308c458de314b6b3e5a16ebd8cab657 SHA1 c11421ed33f7808eb5b709f8ac13aecb8a4f5a32 SHA256 caae0e9a84c7be75ab2460ca224352ae9914a025395f5f1e936df9d7bcee242f
 EBUILD parity-1.2.1.ebuild 1469 RMD160 f0201ba9002231d52bc7dd8caab97a08c5acb7a6 SHA1 5452e02ed04828ef601ec77e359b0ee34a1d2ef1 SHA256 2bb723654834b7821f27d9f00f16f181119d46d8d37cbaa4c04a4ecdf419d767
 EBUILD parity-1.2.2.ebuild 1469 RMD160 2ff9e8c94a933d86419c86aa67527dc4c8475616 SHA1 add8a8bb546528fab197e10896a3f7858079ff4f SHA256 69eab7ff9a279cd65b55c8362a70dc46937715197f13e5984170136133615f64
 EBUILD parity-9999.ebuild 1647 RMD160 c7d3b59e4eaba7b45cbd38dbdbeebaee7fb99fe9 SHA1 bb03bc353148a3c033da9fd80ec047d230c9ba56 SHA256 e5bf21392c678dcc10a6b53bc6c2d680b29cb2bef1b1fcf146fd0907b4d7676e
-MISC ChangeLog 2498 RMD160 bc3927422d674e69e678caa617c3c3edd5a35723 SHA1 e6e10fd40f3ef35601de24cce01b1bc87e0c0df5 SHA256 3cd688a937ac4f5c290a38339ab607631fa78ebe64a2d5fa6c081f5cbfe7692a
+MISC ChangeLog 2645 RMD160 f0fb7c399c4dbc700c9ac966955953e789e76dcf SHA1 a80cb11f7717b449f5c55dc5fc57670bb040f813 SHA256 1af27309614f6f8fb4c149c7408af5eac9345709d99dca784648aa80f78ee7e7
 MISC metadata.xml 255 RMD160 5cf1b4dac09b88b5d9d409a808c902351565c87d SHA1 18362d69850fd6e1cfdd5af125ca3676e439072e SHA256 fbdb7a8bcb38969ff60fddf3131f3ee837da046a77d73c22b27e81fb05233a45
