@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Jan 2009; Markus Duft <mduft@gentoo.org>
+  files/parity-prefix-wrapper.sh:
+  updated prefix wrapper script to handle library paths correctly
+
 *parity-1.2.2 (15 Jan 2009)
 
   15 Jan 2009; User generated by SUA Setup Script <mduft@gentoo.org>
